src/test/ui/associated-types/associated-types-multiple-types-one-trait.stderr
error[E0271]: type mismatch resolving `<T as Foo>::Y == i32`
  --> $DIR/associated-types-multiple-types-one-trait.rs:13:5
   |
LL |     want_y(t);
   |     ^^^^^^ expected `i32`, found associated type
...
LL | fn want_y<T:Foo<Y=i32>>(t: &T) { }
   |    ------       ----- required by this bound in `want_y`
   |
   = note:         expected type `i32`
           found associated type `<T as Foo>::Y`
   = note: consider constraining the associated type `<T as Foo>::Y` to `i32`
   = note: for more information, visit https://doc.rust-lang.org/book/ch19-03-advanced-traits.html

error[E0271]: type mismatch resolving `<T as Foo>::X == u32`
  --> $DIR/associated-types-multiple-types-one-trait.rs:18:5
   |
LL |     want_x(t);
   |     ^^^^^^ expected `u32`, found associated type
...
LL | fn want_x<T:Foo<X=u32>>(t: &T) { }
   |    ------       ----- required by this bound in `want_x`
   |
   = note:         expected type `u32`
           found associated type `<T as Foo>::X`
   = note: consider constraining the associated type `<T as Foo>::X` to `u32`
   = note: for more information, visit https://doc.rust-lang.org/book/ch19-03-advanced-traits.html

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0271`.
